submodule irc_commands added

--- a/.gitmodules
+++ b/.gitmodules
@@ -154,3 +154,6 @@
 [submodule "mods/irc"]
 	path = mods/irc
 	url = git@github.com:mehrbauen/minetest-irc.git
+[submodule "mods/irc_commands"]
+	path = mods/irc_commands
+	url = https://github.com/ShadowNinja/minetest-irc_commands.git
