--- a/.gitmodules
+++ b/.gitmodules
@@ -153,7 +153,7 @@
 	url = https://github.com/VanessaE/biome_lib.git
 [submodule "mods/irc"]
 	path = mods/irc
-	url = git@github.com:mehrbauen/minetest-irc.git
+	url = git://github.com/mehrbauen/minetest-irc.git
 [submodule "mods/irc_commands"]
 	path = mods/irc_commands
 	url = https://github.com/ShadowNinja/minetest-irc_commands.git
