replace mobf with mobs

--- a/.gitmodules
+++ b/.gitmodules
@@ -181,3 +181,6 @@
 [submodule "mods/adv_spawning"]
 	path = mods/adv_spawning
 	url = https://github.com/sapier/adv_spawning.git
+[submodule "mods/mobs"]
+	path = mods/mobs
+	url = https://github.com/tenplus1/mobs.git
